--- a/app/assets/stylesheets/pages/_index_dashboard.scss
+++ b/app/assets/stylesheets/pages/_index_dashboard.scss
@@ -28,6 +28,7 @@
   font-size: 15px;
   font-weight: 700;
   border: 2px solid $darkpurple;
+  cursor: pointer;
 }
 .button-chat:hover {
   background-color: white;
